# reverse-geocoding-uber-h3

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  exploring_dataset.ipynb  pyproject.toml  read_shapefile.py  requirements.txt  setup.cfg  utils.py
.github/workflows/: test.yml
cql/: insert_country.cql  insert_subdivision.cql  read_country.cql  read_subdivision.cql
docs/: conf.py
docs/_templates/: badges.html  github.html  moreinfo.html
geocoding/: geocoder.py  settings.py  storage.py  utils.py  web_demo.py
geocoding/convertors/: geojson.py  h3.py
geocoding/extractors/: gadm.py  gadm36.py
geocoding/models/: cql.py  gadm.py
geocoding/processing/: h3.py
geocoding/scripts/: fill_countries.py  fill_subdivisions.py  init_scylla.py
geocoding/scylla/: connector.py  scylla.py  session.py
geocoding/storage/: base.py  countries.py  country.py  subdivision.py  subdivisions.py
notebooks/: evaluate_countries.ipynb  evaluate_subdivisions.ipynb  measure_performance.ipynb
tests/: conftest.py  test_extractors.py  test_models.py  test_some_function.py
tests/convertors/: test_geojson.py  test_h3.py
tests/processing/: test_h3.py
tests/static/: gadm36_0_row.json  gadm36_1_row.json
tests/test_example/: conftest.py  test_extractors.py  test_some_function.py
